--- a/pbsite/templates/admin/login.html
+++ b/pbsite/templates/admin/login.html
@@ -16,7 +16,7 @@
 <div id="content-main">
 <form action="{{ app_path }}" method="post" id="login-form">
   <div class="form-row">
-    <label for="id_username">{% trans 'Username:' %}</label> <input type="text" name="username" id="id_username" />
+    <label for="id_username">Test{% trans 'Username:' %}</label> <input type="text" name="username" id="id_username" />
   </div>
   <div class="form-row">
     <label for="id_password">{% trans 'Password:' %}</label> <input type="password" name="password" id="id_password" />
