Working read access to User Profile.  Removed email from UserProfile, since email exists in the main user object.
Former-commit-id: f891206071553ddc76e3eaca3dc9ed491666985d
Former-commit-id: a39e98087222424be71d0e80d41c60b091dac3ec

--- a/pbsite/templates/authopenid/settings.html
+++ b/pbsite/templates/authopenid/settings.html
@@ -21,12 +21,15 @@
 {% block content %}
 <p>Username: {{ user.username }}</p>
 <p>Email: {{ user.email }}</p>
+<p>Full Name: {{ user.get_full_name }}</p>
 <p>First Name: {{ user.first_name }}</p>
 <p>Last Name: {{ user.last_name }}</p>
 <p>Staff: {{ user.is_staff }}</p>
 <p>Superuser: {{ user.is_superuser }}</p>
 <p>Last Login: {{ user.last_login }}</p>
 <p>Date Joined: {{ user.date_joined }}</p>
+<p>Profile Slug: {{ user.get_profile.slug }}</p>
+
 <div id="settings-intro">
     <h4><strong>{{ user.username }}</strong> {% trans "Settings" %}</h4>
     {% blocktrans %}
