Added signup url to signin form.  Added title to change email template.
Former-commit-id: 9bb272f2e7863edc1d822ded4def295ac339807d
Former-commit-id: 5e663eeced64725d523cd17a780229ade5598978

--- a/pbsite/templates/authopenid/signup.html
+++ b/pbsite/templates/authopenid/signup.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load i18n %}
 
+{% block headtitle %}Podiobooks User Registration{% endblock %}
+
+{% block title %}Podiobooks User Registration{% endblock %}
+
 {% block content %}
 
 <div class="jointxt">
