--- a/pbsite/templates/authopenid/changeemail.html
+++ b/pbsite/templates/authopenid/changeemail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-
+{% block title %}Podiobooks User Profile - Change Email{% endblock %}
 
 
 {% block content %}
