--- a/pbsite/templates/authopenid/settings.html
+++ b/pbsite/templates/authopenid/settings.html
@@ -1,61 +1,52 @@
 {% extends "base.html" %}
 {% load i18n %}
-
 {% block headtitle %}Podiobooks User Profile{% endblock %}
-
 {% block head %}
 <style type="text/css" media="screen">
-	dt, dd { padding:0 0 0.35em 0; }
-	dt { float: left; width: 21ex;  }
-	dd { margin-left: 23ex;  }
-	
-	#settings-options, #settings-intro { padding: 4em 1.5em;}
-	#settings-options { min-height: 300px; border-left: 1px solid #333;}
-	
-	#settings-options h5 { font-weight: bold;}
+dt,dd {
+	padding: 0 0 0.35em 0;
+}
+
+dt {
+	float: left;
+	width: 21ex;
+}
+
+dd {
+	margin-left: 23ex;
+}
 </style>
 {% endblock %}
-
 {% block title %}Podiobooks User Profile{% endblock %}
-
 {% block content %}
-<p>Username: {{ user.username }}</p>
-<p>Email: {{ user.email }}</p>
-<p>Full Name: {{ user.get_full_name }}</p>
-<p>First Name: {{ user.first_name }}</p>
-<p>Last Name: {{ user.last_name }}</p>
-<p>Staff: {{ user.is_staff }}</p>
-<p>Superuser: {{ user.is_superuser }}</p>
-<p>Last Login: {{ user.last_login }}</p>
-<p>Date Joined: {{ user.date_joined }}</p>
-<p>Profile Slug: {{ user.get_profile.slug }}</p>
+<dl>
+	<dt>Username:</dt><dd>{{ user.username }}&nbsp;</dd>
+	<dt>Email:</dt> <dd>{{ user.email }}&nbsp;</dd>
+	<dt>Full Name:</dt> <dd>{{ user.get_full_name }}&nbsp;</dd>
+	<dt>First Name:</dt> <dd>{{ user.first_name }}&nbsp;</dd>
+	<dt>Last Name:</dt> <dd>{{ user.last_name }}&nbsp;</dd>
+	<dt>Staff:</dt> <dd>{% if user.is_staff %}Yes{% else %}No{% endif %}&nbsp;</dd>
+	<dt>Superuser:</dt> <dd>{% if user.is_superuser %}Yes{% else %}No{% endif %}&nbsp;</dd>
+	<dt>Last Login:</dt> <dd>{{ user.last_login }}&nbsp;</dd>
+	<dt>Date Joined:</dt> <dd>{{ user.date_joined }}&nbsp;</dd>
+	<dt>Profile Slug:</dt> <dd>{{ user.get_profile.slug }}&nbsp;</dd>
+</dl>
 
-<div id="settings-intro">
-    <h4><strong>{{ user.username }}</strong> {% trans "Settings" %}</h4>
-    {% blocktrans %}
-    <p>This is where you can make changes to your account.</p>
-
-    {% endblocktrans %}
-</div>
-
-<div id="settings-options">
-	{% if msg %}
-		<p class="error">{{ msg }}</p>
+{% if msg %}
+<p class="error">{{ msg }}</p>
+{% endif %}
+<dl>
+	<dt>» <a href="{% url user_signout %}">{% trans "log out" %}</a></dt>
+	<dd>{% trans "Sign out of the site" %}</dd>
+	<dt>» <a href="{% url user_changepw %}">{% trans "change password" %}</a></dt>
+	<dd>{% trans "Give your account a new password." %}</dd>
+	<dt>» <a href="{% url user_changeemail %}">{% trans "change email" %}</a></dt>
+	<dd>{% trans "Add or update the email address associated with your account." %}</dd>
+	{% if is_openid %}
+	<dt>» <a href="{% url user_changeopenid %}">{% trans "change openid url" %}</a></dt>
+	<dd>{% trans "Change openid associated to your account" %}</dd>
 	{% endif %}
-    <h5>{% trans "Account" %}</h5>
-	<dl>
-        <dt>» <a href="{% url user_changepw %}">{% trans "change password" %}</a></dt>
-        <dd>{% trans "Give your  account a new password." %}</dd>
-        <dt>» <a href="{% url user_changeemail %}">{% trans "change email" %}</a></dt>
-        <dd>{% trans "Add or update the email address associated with your account." %}</dd>
-        {% if is_openid %}
-        <dt>» <a href="{% url user_changeopenid %}">{% trans "change openid url" %}</a></dt>
-        <dd>{% trans "Change openid associated to your account" %}</dd>
-        {% endif %}
-        
-        <dt>» <a href="{% url user_delete %}">{% trans "delete account" %}</a></dt>
-        <dd>{% trans "Erase your username and all your data from website" %}</dd>
-	</dl>
-</div>
-<a href = "/">Home</a>
+	<dt>» <a href="{% url user_delete %}">{% trans "delete account" %}</a></dt>
+	<dd>{% trans "Erase your username and all your data from website" %}</dd>
+</dl>
 {% endblock %}
