--- a/pbsite/templates/authopenid/signin.html
+++ b/pbsite/templates/authopenid/signin.html
@@ -34,7 +34,7 @@
 		<div class="form-row"><label for="id_username">{% trans "Username:" %}</label><br />{{ form1.username }}</div>
 		<div class="form-row"><label for="id_password">{% trans "Password" %}</label><br />{{ form1.password }}</div>
         <div class="submit-row"><input type="submit" name="blogin" value="{% trans "Sign in" %}"> </div>
-        <div>&nbsp;&nbsp;<a href="{{ sendpw_url }}">{% trans "Lost your password ?" %}</a></div>
+        <div>&nbsp;&nbsp;<a href="{{ sendpw_url }}">{% trans "Lost your password ?" %}</a> | <a href="/account/signup/">{% trans "Register for this Site" %}</a> </div>
 	</fieldset>	
 </form>
 
@@ -48,6 +48,6 @@
 		
 	</fieldset>
 </form>	
-</div>	
+</div>
 {% endblock %}
 
