--- a/pbsite/templates/authopenid/changeemail.html
+++ b/pbsite/templates/authopenid/changeemail.html
@@ -27,7 +27,7 @@
 	<form action="." method="post" accept-charset="utf-8">
 
 		<div id="form-row"><label for="id_email">{% trans "Email" %}</label>{{ form.email }}</div>
-		<div id="form-row"><label for="id_password">{% trans "Password" %}</label>{{ form.password }}</div>
+		<div id="form-row"><label for="id_password">{% trans "Password or OpenID URL" %}</label>{{ form.password }}</div>
 
         <p><input type="submit" value="{% trans "Change email" %}"></p>
 
