Turned off autoescaping on the title detail template so that you don't see the raw HTML there.  Looks like the data insertion needs to be tweaked to not store the extra slashed quotes, though.

--- a/pbsite/main/templates/main/title/detail.html
+++ b/pbsite/main/templates/main/title/detail.html
@@ -1,5 +1,5 @@
 {% load title_extras %}
-<div class="description">{{title.description}}</div>
+<div class="description">{% autoescape off %}{{title.description}}{% endautoescape %}</div>
 <div class="cover"><img src="{{object.cover.url}}" title="{{title.name}} Cover" alt=""/></div>
 {% show_categories title %}
 
