More updates to pull all the info we have working so far.
Former-commit-id: d39e58d8fc37cd18bb25868bdf8bd0c846f4a03a
Former-commit-id: 23a3b89c5f5d167603bb8077d10a801e2acd4dc5
Former-commit-id: e7df5a677929494a10b5a5d3a79ca63733aebf33

--- a/pbsite/main/templates/main/index.html
+++ b/pbsite/main/templates/main/index.html
@@ -7,38 +7,76 @@
 
 <!-- Temp Styles, should be moved to global sheet -->
 <style>
-.userblock {
-	outline: 1px solid black;
-}
-.navblock {
+.menublock {
 	outline: 1px solid black;
 }
 .featuredtitlesblock {
 	outline: 2px solid green;
 }
+.heading {
+	clear:both;
+	position:relative;
+	background: url("images/headingbackground.jpg");
+	height: 35px;
+	margin:0 0 1em 0;
+	padding:0;
+}
+
+.heading p {
+	float:left;
+	font: 14pt Helvetica, Verdana, Arial, sans-serif;
+	margin:0;
+	padding-top:.4em;
+}
+
+.smalltext {
+	font: 8pt Helvetica, Verdana, Arial, sans-serif;
+	margin:0;
+	padding-top:.4em;
+	text-decoration: none;
+}
+.row1 {
+	background-color: rgb(194, 194, 194);
+}
+.row2 {
+	background-color: #ffffff;
+}
 </style>
 
-<div class="userblock">
+<div class="menublock">
+<p>
 {% if user.is_authenticated %}
-	<p>Welcome, {{ user.username }}</p>
-	<p><a href="/account">Manage Account</a></p>
-	<p><a href="/account/signout">Logout</a></p>
+	Welcome, {{ user.username }}
+	| <a href="{% url django_authopenid.views.account_settings %}">Manage Account</a>
+	| <a href="{% url django_authopenid.views.signout %}">Logout</a>
 {% else %}
-	<p><a href="account/signin">Login</a></p>
+	<p><a href="{% url django_authopenid.views.signin %}">Login/Register</a>
 {% endif %}
-</div>
-
-<div class="navblock">
-<h3><a href="title">List of Titles</a></h3>
+| Blog
+| Why Donate?
+| Search
+| FAQ
+| Staff
+| Authors
+| PBPro
+| Privacy and Legal
+| Community
+</p>
 </div>
 
 <div class="featuredtitlesblock">
-<h1>Featured Titles</h1>
-<ul>
+<div class="heading"><p>Selections from the Staff <span class="smalltext">(<a href="{% url title_list %}">Show all books</a>)</span></p></div>
+<table>
 {% for title in titles %}
-	<li><a href="{{title.get_absolute_url}}">{{ title.name }}</a></li>
+	<tr valign="top" class="{% cycle 'row1' 'row2' %}">	
+		<td><img src="http://podiobooks.com/images/covers/{{ title.cover }}" /></td>
+		<td>
+			<p><a href="{{ title.get_absolute_url }}">{{ title.name }}</a><p>
+			<p>{% autoescape off %}{{ title.description|truncatewords_html:100 }}{% endautoescape %} <a href="{{ title.get_absolute_url }}">[more]</a></p>
+		</td>
+	</tr>
 {% endfor %}
-</ul>
+</table>
 </div>
 
 {% endblock %}
