Added link to openID signin.
Former-commit-id: 84b2a3f8e112a0e3234e1b2f7af3ea29cf36872e
Former-commit-id: fe458c2e74b052e3bb291dcdff4fbd3ebb3a879a
Former-commit-id: 6f14e40655792c9b6a76e55aa22e2148b5e1b734

--- a/pbsite/templates/authopenid/signin.html
+++ b/pbsite/templates/authopenid/signin.html
@@ -49,6 +49,7 @@
 	<fieldset>
 		<legend>{% trans "Sign In Using Your OpenID URL" %}</legend>
         <div class="form-row"><label for="id_openid_ul">{% trans "OpenId URL :" %}</label><br />{{ form2.openid_url }}</div>
+        <span style="font-size: 0.8em">(e.g. http://username.myopenid.com)</span>
         <div class="submit-row "><input name="bsignin" type="submit" value="{% trans "Sign in with OpenID" %}"></div>
 	</fieldset>
 </form>	
