Working Upload/Verify.
Former-commit-id: f2aa741d764d9a7b33eaf6a54bae49afe7e4e4ad
Former-commit-id: 48a3970c145cd4bc8e638aa0618152ca1d0fec62
Former-commit-id: a25ba7fdf796cabca5e589f6cb7bd8e0e2ceb86a

--- a/pbsite/author/templates/author/upload_results.html
+++ b/pbsite/author/templates/author/upload_results.html
@@ -6,4 +6,11 @@
 
 {% block content %}
 File Uploaded Successfully as {{ fileName }}
+
+<h2>Validaton Results</h2>
+<pre>
+{% for result in results %}
+{{ result }}
+{% endfor %}
+</pre>
 {% endblock %}
