New authopenid templates from 1.0.1.
Former-commit-id: 9dc64cafeec1ebf4a6a64ee33ea94c7ff6edbbb9
Former-commit-id: fbbc6536a7c4e14c37d9c603bd6301c9eb437032
Former-commit-id: 3b3871ae2b533af1b4b3980fb4e4eb644f033fea

--- a/pbsite/templates/authopenid/complete.html
+++ b/pbsite/templates/authopenid/complete.html
@@ -1,10 +1,13 @@
 {% extends "base.html" %}
 {% load i18n %}
 
+{% block head %}
+{% if debug %}
+<!-- pbsite/templates/authopenid/complete.html -->
+{% endif %}
+{% endblock %}
 
-
-{% block head %}{% endblock %}
-
+{%block title %}Associate Your OpenID With a New or Existing Account{% endblock %}
 
 {% block content %}
 
