--- a/pbsite/templates/authopenid/signin.html
+++ b/pbsite/templates/authopenid/signin.html
@@ -16,6 +16,7 @@
 {%block title %}Sign In to Podiobooks.com{% endblock %}
 
 {% block content %}
+
 {% if msg %}
 <br />
 	<p class="warning">{{ msg }}</p>
@@ -36,8 +37,8 @@
         {{ form1.next }}
 	<fieldset>
 		<legend>{% trans "Sign In Using Your Account ID" %}</legend>
-		<div class="form-row"><label for="id_username">{% trans "Username:" %}</label><br />{{ form1.username }}</div>
-		<div class="form-row"><label for="id_password">{% trans "Password" %}</label><br />{{ form1.password }}</div>
+		<div class="form-row"><label for="id_username">{% trans "Username :" %}</label><br />{{ form2.username }}</div>
+		<div class="form-row"><label for="id_password">{% trans "Password :" %}</label><br />{{ form2.password }}</div>
         <div class="submit-row"><input type="submit" name="blogin" value="{% trans "Sign in" %}"> </div>
         <div>&nbsp;&nbsp;<a href="{{ sendpw_url }}">{% trans "Lost your password ?" %}</a> | <a href="/account/signup/">{% trans "Register for this Site" %}</a> </div>
 	</fieldset>	
@@ -48,7 +49,7 @@
     {{ form2.next }}
 	<fieldset>
 		<legend>{% trans "Sign In Using Your OpenID URL" %}</legend>
-        <div class="form-row"><label for="id_openid_ul">{% trans "OpenId URL :" %}</label><br />{{ form2.openid_url }}</div>
+        <div class="form-row"><label for="id_openid_ul">{% trans "OpenId URL :" %}</label><br />{{ form1.openid_url }}</div>
         <span style="font-size: 0.8em">(e.g. http://username.myopenid.com)</span>
         <div class="submit-row "><input name="bsignin" type="submit" value="{% trans "Sign in with OpenID" %}"></div>
 	</fieldset>
