--- a/pbsite/templates/base.html
+++ b/pbsite/templates/base.html
@@ -4,6 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>{% block headtitle %}Podiobooks{% endblock %}</title>
+	<LINK REL="StyleSheet" HREF="/content/css/base.css" TYPE="text/css">
 	{% block head %}{% endblock %}
 </head>
 
