Fixing location of authopenid/registration templates.
Former-commit-id: d2e5574cbcb175a1b3329a6073d25b6d49041978
Former-commit-id: 53d98ebce757b1db9505d294207a88b8559c6e1b
Former-commit-id: 44564626b041959c5220fd699d4be951d940d0cb

--- a/pbsite/templates/authopenid/signin.html
+++ b/pbsite/templates/authopenid/signin.html
@@ -1,59 +1,73 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block head %}
-{% if debug %}
-<!-- pbsite/templates/authopenid/signin.html -->
-{% endif %}
-<style type="text/css">
-.openid {
-	background: #FFFFFF url('/content/images/openid-icon-small.gif') no-repeat scroll 0pt 50%;
-	padding-left: 18px;
-}
-</style>
-{% endblock %}
-
-{%block title %}Sign In to Podiobooks.com{% endblock %}
-
 {% block content %}
-
 {% if msg %}
 <br />
 	<p class="warning">{{ msg }}</p>
 {% endif %}
-{% if form1.errors %}
-<p class="errors">{% trans "Please correct errors below:" %}<br />
-	{% if form1.username.errors %} 
-		<span class="error">{{ form1.username.errors|join:", " }}</span>
+{% if form2.errors %}
+<div class="errors"><p>{% trans "Please correct errors below:" %}<br />
+	{% if form2.username.errors %} 
+		<span class="error">{{ form2.username.errors|join:", " }}</span>
 	{% endif %}
-	{% if form1.password.errors %} 
-		<span class="error">{{ form1.password.errors|join:", " }}</span>
+	{% if form2.password.errors %} 
+		<span class="error">{{ form2.password.errors|join:", " }}</span>
 	{% endif %}
-</p>
+</p></div>
+<br>
 {% endif %}
+
+{% if form1.errors %}
+<div class="errors">
+    <p><span class="error">{{ form1.openid_url.errors|join:", " }}</span></p>
+</div>
+<br>
+{% endif %}
+<h2>Make a choice:</h2>
+<p> <a href="{% url registration_register %}">Register</a> | <a href="{% url user_signin %}">Log-In</a></p>
 <div class="login">
 
-    <form name="fauth" action="{% url user_signin %}" method="post">
-        {{ form1.next }}
+    <form id="auth_form" name="auth_form" action="{% url user_signin %}" method="post">
+    <input type="hidden" name="next" value="{{ next }}" />
 	<fieldset>
+	    
+	    
 		<legend>{% trans "Sign In Using Your Account ID" %}</legend>
-		<div class="form-row"><label for="id_username">{% trans "Username :" %}</label><br />{{ form2.username }}</div>
-		<div class="form-row"><label for="id_password">{% trans "Password :" %}</label><br />{{ form2.password }}</div>
+		<div class="form-row"><label for="id_username">{% trans "Username:" %}</label><br />{{ form2.username }}</div>
+		<div class="form-row"><label for="id_password">{% trans "Password" %}</label><br />{{ form2.password }}</div>
+		
         <div class="submit-row"><input type="submit" name="blogin" value="{% trans "Sign in" %}"> </div>
-        <div>&nbsp;&nbsp;<a href="{{ sendpw_url }}">{% trans "Lost your password ?" %}</a> | <a href="/account/signup/">{% trans "Register for this Site" %}</a> </div>
 	</fieldset>	
 </form>
 
-<br />
-<form name="fopenid" action="{% url user_signin %}" method="post">
-    {{ form2.next }}
+<form id="openid_form" name="openid_form" action="{% url user_signin %}" method="post">
+    <input type="hidden" name="action" value="verify" />
+    <input type="hidden" name="next" value="{{ next }}" />
 	<fieldset>
 		<legend>{% trans "Sign In Using Your OpenID URL" %}</legend>
-        <div class="form-row"><label for="id_openid_ul">{% trans "OpenId URL :" %}</label><br />{{ form1.openid_url }}</div>
-        <span style="font-size: 0.8em">(e.g. http://username.myopenid.com)</span>
-        <div class="submit-row "><input name="bsignin" type="submit" value="{% trans "Sign in with OpenID" %}"></div>
+		<div id="openid_choice">
+    		<p>Please click your account provider:</p>
+    		<div id="openid_btns"></div>
+    	</div>
+    	    <div id="openid_input_area">
+                <label for="id_openid_url">{% trans "OpenId URL :" %}</label>{{ form1.openid_url }}
+                <input name="openid_submit" type="submit" value="{% trans "Sign in with OpenID" %}">
+            </div>
+		
 	</fieldset>
 </form>	
-</div>
+</div>	
+{% endblock %}
+
+{% block extra_scripts %}
+<script type="text/javascript" src="{{ MEDIA_URL }}/js/openid-jquery.js"></script>
+<script type="text/javascript">
+$(document).ready(function() {
+    openid.init('id_openid_url');
+});
+</script>
+<!-- /Simple OpenID Selector -->
+    
 {% endblock %}
 
