Updated to use MEDIA_URL
Former-commit-id: 818667798588df1ea8c43f6a3f55338106b050c9
Former-commit-id: 3ae413d9c4853c05b9aaed589860cb7a3cdaa4df
Former-commit-id: 0c50816be1ec0823b112b0bb123922a1b8cbcc9e

--- a/pbsite/templates/authopenid/signin.html
+++ b/pbsite/templates/authopenid/signin.html
@@ -3,7 +3,7 @@
 
 {% block head %}
 
-<link rel="StyleSheet" HREF="/content/openid-selector/css/openid.css" TYPE="text/css">
+<link rel="StyleSheet" HREF="{{ MEDIA_URL }}/openid-selector/css/openid.css" TYPE="text/css">
 
 {% endblock %}
 
