--- a/pbsite/templates/base.html
+++ b/pbsite/templates/base.html
@@ -4,8 +4,8 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>{% block headtitle %}Podiobooks{% endblock %}</title>
-	<link rel="StyleSheet" HREF="{{ MEDIA_URL }}/css/base.css" TYPE="text/css">
-	<script type="text/javascript" src="{{ MEDIA_URL }}/scripts/jquery-1.3.1.min.js"></script>
+	<link rel="StyleSheet" HREF="{{ MEDIA_URL }}css/base.css" TYPE="text/css">
+	<script type="text/javascript" src="{{ MEDIA_URL }}scripts/jquery-1.3.1.min.js"></script>
 	{% block head %}{% endblock %}
 </head>
 
