Tweaked to allow dynamic image path.
Former-commit-id: 88833d03495cf013e7fc820f9e849a84648b7648
Former-commit-id: 971232cea7771106722d6d479c9124062e17a253
Former-commit-id: e9da5bd1b60f2b25c94fbb02f5cb69a16b40794b

--- a/pbsite/templates/authopenid/signin.html
+++ b/pbsite/templates/authopenid/signin.html
@@ -69,7 +69,7 @@
 <script type="text/javascript" src="{{ MEDIA_URL }}openid-selector/js/openid-jquery.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-    openid.init('openid_url');
+    openid.init('openid_url', '{{ MEDIA_URL }}openid-selector/images/');
 });
 </script>
 {% endblock %}
