--- a/pbsite/templates/authopenid/signin.html
+++ b/pbsite/templates/authopenid/signin.html
@@ -2,10 +2,10 @@
 {% load i18n %}
 
 {% block head %}
-
 <link rel="StyleSheet" HREF="{{ MEDIA_URL }}openid-selector/css/openid.css" TYPE="text/css">
-
 {% endblock %}
+
+{%block title %}Sign In to Podiobooks.com{% endblock %}
 
 {% block content %}
 {% if msg %}
