--- a/pbsite/main/templates/main/title/detail.html
+++ b/pbsite/main/templates/main/title/detail.html
@@ -1,5 +1,4 @@
 {% load title_extras %}
 <div class="description">{% autoescape off %}{{title.description}}{% endautoescape %}</div>
-<div class="cover"><img src="{{object.cover.url}}" title="{{title.name}} Cover" alt=""/></div>
+<div class="cover"><img src="{{ MEDIA_URL }}images/covers/{{title.cover}}" title="{{title.name}} Cover" alt=""/></div>
 {% show_categories title %}
-
