--- a/pbsite/main/templates/main/title/detail.html
+++ b/pbsite/main/templates/main/title/detail.html
@@ -1,4 +1,17 @@
-{% load title_extras %}
+{% extends "base.html" %}
+
+{% block headtitle %}{{ title.name }} - Podiobooks.com{% endblock %}
+
+{% block title %}{{ title.name }}{% endblock %}
+
+{% block content %}
+{% if title.categories.all %}
+<ul id="category_inline_list" class="category_inline_list"
+{% for category in title.categories.all %}
+<li>{{ category.name }}{% if not forloop.last %},{% endif %}</li>
+{% endfor %}
+</ul>
+{% endif %}
 <div class="description">{% autoescape off %}{{title.description}}{% endautoescape %}</div>
 <div class="cover"><img src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" title="{{ title.name }} Cover" alt="{{ title.name }} cover art"/></div>
-{% show_categories title %}
+{% endblock %}
