Added backlinks to Title List and Home Page.
Former-commit-id: d5caecbb8af03d031caf05e0ec62601324d0ffa5
Former-commit-id: d6a3768fef046ecc1195c555b01eefcbd7b843d7
Former-commit-id: 386184fcb8dccde10837017137fb73f37205591d
Former-commit-id: 848d3ef66ca5bea229a8a2f273072a1d4c52fe3e

--- a/pbsite/main/templates/main/title/detail.html
+++ b/pbsite/main/templates/main/title/detail.html
@@ -14,4 +14,6 @@
 {% endif %}
 <div class="description">{% autoescape off %}{{title.description}}{% endautoescape %}</div>
 <div class="cover"><img src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" title="{{ title.name }} Cover" alt="{{ title.name }} cover art"/></div>
+
+<p><a href="{% url category_list %}">Back to Title List</a> | <a href="/">Back to Home Page</a> </p>
 {% endblock %}
