Fixed link to home page.

--- a/pbsite/main/templates/main/category/detail.html
+++ b/pbsite/main/templates/main/category/detail.html
@@ -19,4 +19,5 @@
 	</tr>
 {% endfor %}
 </table>
+<p><a href="{% url category_list %}">Back to Category List</a> | <a href="/">Back to Home Page</a> </p>
 {% endblock %}
