--- a/pbsite/main/templates/main/title/list.html
+++ b/pbsite/main/templates/main/title/list.html
@@ -5,6 +5,7 @@
 {% block title %}All Titles{% endblock %}
 
 {% block content %}
+<p><a href="/">Back to Home Page</a></p>
 <p><a href="{% url category_list %}">Category List</a></p>
 
 <table>
