Fixed link to home/title page.
Former-commit-id: f1abf5fb45c6ac66eb1b2bf2b8193ed077527ea0
Former-commit-id: b5d56f6fee1fa9a2b20c7918a63365ae464eb9d5
Former-commit-id: 74e768fd07a51229f1fb1463b710a5e9b005d61c
Former-commit-id: c11bb09fd4c1f406cdcc0d54c06e3ba6abcdfcd1

--- a/pbsite/main/templates/main/category/list.html
+++ b/pbsite/main/templates/main/category/list.html
@@ -11,5 +11,6 @@
   <li class="category_{{category.slug}}"><a href="{{category.get_absolute_url}}">{{ category.name }}</a> - {{ category.titles.all.count }} titles</li>
   {% endfor %}
 </ul>
+<p><a href="{% url title_list %}">Back to Title List</a> | <a href="/">Back to Home Page</a> </p>
 {% endblock %}
 
