Added name to home page URL, and updated references thereto.
Former-commit-id: ebf579462be15334112af42b4b5f98bbf58104d0
Former-commit-id: 71b6c750ca34b09a933ed5a56efc6f53a54e2ad1
Former-commit-id: d8fcc4c2d154f0f401c9374d76f399288db6214a
Former-commit-id: 034aba25a582a18500c849347e547f373ea7f537

--- a/pbsite/main/templates/main/category/detail.html
+++ b/pbsite/main/templates/main/category/detail.html
@@ -19,5 +19,5 @@
 	</tr>
 {% endfor %}
 </table>
-<p><a href="{% url category_list %}">Back to Category List</a> | <a href="/">Back to Home Page</a> </p>
+<p><a href="{% url category_list %}">Back to Category List</a> | <a href="{% url home_page %}">Back to Home Page</a> </p>
 {% endblock %}
