--- a/pbsite/main/templates/main/title/detail.html
+++ b/pbsite/main/templates/main/title/detail.html
@@ -15,5 +15,5 @@
 <div class="description">{% autoescape off %}{{title.description}}{% endautoescape %}</div>
 <div class="cover"><img src="{{ MEDIA_URL }}images/covers/{{ title.cover }}" title="{{ title.name }} Cover" alt="{{ title.name }} cover art"/></div>
 
-<p><a href="{% url title_list %}">Back to Title List</a> | <a href="/">Back to Home Page</a> </p>
+<p><a href="{% url title_list %}">Back to Title List</a> | <a href="{% url home_page %}">Back to Home Page</a> </p>
 {% endblock %}
