--- a/pbsite/templates/base.html
+++ b/pbsite/templates/base.html
@@ -1,38 +1,26 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<title>{% block headtitle %}Podiobooks{% endblock %}</title>
-	<link rel="StyleSheet" HREF="{{ MEDIA_URL }}css/base.css" TYPE="text/css">
-	<script type="text/javascript" src="{{ MEDIA_URL }}scripts/jquery-1.3.1.min.js"></script>
-	{% block head %}{% endblock %}
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<title>{% block headtitle %}Podiobooks{% endblock %}</title>
+{% block metatags %}
+<meta name="Keywords" content="audio books, audiobooks, books, novels, podcast, podcasting, podiobooks" /> 
+<meta name="Description" content="Free audio books delivered as podcasts. Subscribe for free to any book and start from chapter one. Podiobooks.com" />
+{% endblock %}
+{% block legacyincludes %}{% include "legacy/header_includes.html" %}{% endblock %}
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/base.css" >
+<script type="text/javascript" src="{{ MEDIA_URL }}scripts/jquery-1.3.1.min.js"></script>
+{% block head %}{% endblock %}
 </head>
 
-<body class="{% if is_popup %}popup {% endif %}{% block bodyclass %}{% endblock %}">
-{% block header %}
-<div class="menublock">
-<p>
-{% if user.is_authenticated %}
-	Welcome, {{ user.username }}
-	| Manage Account
-	| <a href="{% url django_authopenid.views.signout %}">Logout</a>
-{% else %}
-	<p><a href="{% url django_authopenid.views.signin %}">Login/Register</a>
-{% endif %}
-| Blog
-| Why Donate?
-| Search
-| FAQ
-| Staff
-| Authors
-| PBPro
-| Privacy and Legal
-| <a href="http://community.podiobooks.com/">Community</a>
-</p>
-</div>
-{% endblock %}
-<h2>{% block title %}No Title Defined{% endblock %}</h2>
+<body {% block bodyid %}id="home"{% endblock %}{% block bodyclass %}{% endblock %}">
+{% block sitedivopen %}<div id="site">{% endblock %}
+{% block header %}{% include "header.html" %}{% endblock %}
+{% block pagetitledivopen %}<div class="heading"><p>{% block title %}No Title Defined{% endblock %}</p><img src="{{ MEDIA_URL }}legacy/css/images/headingbookend.jpg" width="32" height="35" /></div>{% endblock %}
+{% block contentdivopen %}<div id="content">{% endblock %}
 {% block content %}No Content Defined{% endblock %}
+{% block contentdivclose %}</div>{% endblock %}
+{% block footer %}{% include "footer.html" %}{% endblock %}
+{% block sitedivclose %}</div>{% endblock %}
 </body>
 </html>
