Re-added Logged in/out logic.
Former-commit-id: ea748f23b34b476bbc0e54567fee1d3f47f4926e
Former-commit-id: 070b9f2cecfe1bdd69c0c08100bcfb4ac638f831
Former-commit-id: 23cebfcd0a52d7826f940521b005c76358ea6215
Former-commit-id: 998de5d7d67f1f41187cc81dce79a753796b8841

--- a/pbsite/templates/header.html
+++ b/pbsite/templates/header.html
@@ -23,7 +23,12 @@
 		<div id="horznavbox"> 
 			<ul> 
 			<li><a href="{% url home_page %}">Home</a></li>
-			    <li><a href="{% url django_authopenid.views.signin %}">Log In/Register</a></li>						
+			    <li>{% if user.is_authenticated %}
+						Welcome, {{ user.username }} | Manage Account | <a href="{% url django_authopenid.views.signout %}">Logout</a>
+					{% else %}
+						<p><a href="{% url django_authopenid.views.signin %}">Login/Register</a>
+					{% endif %}
+				</li>						
 				<li><a href="http://podiobooks.com/blog">Blog</a></li> 
 				<li><a href="http://podiobooks.com/donate.php">Why Donate?</a></li> 
 				<li><a href="http://podiobooks.com/podiobooks/search.php?showall=true">Search</a></li> 
