--- a/pbsite/templates/header.html
+++ b/pbsite/templates/header.html
@@ -2,46 +2,35 @@
 <div id="header"> 
 	<div id="logo"> 
 	<a href="http://www.podiobooks.com/"> 
-	<img src="http://podiobooks.com/images/logo.jpg" width="127" height="93" /></a></div> 
-	
+	<img src="http://podiobooks.com/images/logo.jpg" width="127" height="93" /></a></div>
 	<div id="headerbox"> 
-	
 		<div id="title"><a href="{% url home_page %}"><img src="http://podiobooks.com/images/title.jpg"  height="70" /></a></div> 
-		<div id="quicksearch"><form method="get" id="qsearch" name=id="qsearch" action="http://podiobooks.com/podiobooks/search.php"> 
-		<table border=0 width="660"><tr><td align="left" valign="bottom" style="padding-bottom: 4px"><span class="smalltext" style="color:white;">Free serialized audio books, delivered on your schedule.</span> 
-		</td> 
-		<td align="right"> 
-
-	
-				Search Podiobooks.com:<input type="text" name="keyword" class="formtextbox" size="20" onKeyPress="doClick(document.forms[0],event)" />&nbsp;<input class="formbutton" id="searchSubmit" name="searchSubmit" type="button" value="Go" onClick="doClickSubmit(document.forms[0])" />							</form> 
-					</td></tr></table> 
-					</div> 
-					
+		<div id="quicksearch">
+			<form method="get" id="qsearch" name=id="qsearch" action="http://podiobooks.com/podiobooks/search.php"> 
+			<table border=0 width="660"><tr><td align="left" valign="bottom" style="padding-bottom: 4px"><span class="smalltext" style="color:white;">Free serialized audio books, delivered on your schedule.</span></td> 
+			<td align="right">Search Podiobooks.com:<input type="text" name="keyword" class="formtextbox" size="20" onKeyPress="doClick(document.forms[0],event)" />&nbsp;<input class="formbutton" id="searchSubmit" name="searchSubmit" type="button" value="Go" onClick="doClickSubmit(document.forms[0])" /></form></td></tr></table> 
+		</div>
 		<div id="usercontrols"> 
-		<form action=""> 
-															</form></div> 
 		<div id="horznavbox"> 
 			<ul> 
 			<li><a href="{% url home_page %}">Home</a></li>
-			    {% if user.is_authenticated %}
-						<li>Welcome, {{ user.username }}</li>
-						<li>Manage Account</li>
-						<li><a href="{% url django_authopenid.views.signout %}">Logout</a></li>
-					{% else %}
-						<li><a href="{% url django_authopenid.views.signin %}">Login/Register</a></li>
-					{% endif %}						
-				<li><a href="http://podiobooks.com/blog">Blog</a></li> 
-				<li><a href="http://podiobooks.com/donate.php">Why Donate?</a></li> 
-				<li><a href="http://podiobooks.com/podiobooks/search.php?showall=true">Search</a></li> 
-				<li><a href="http://podiobooks.com/about.php">FAQ</a></li> 
-				<li><a href="http://podiobooks.com/staff.php">Staff</a></li> 
-				<li><a href="http://podiobooks.com/authors.php">Authors</a></li> 
-				
-				<li><a href="http://podiobooks.com/authors/pbpro.php">PBPro</a></li> 
-				<li><a href="http://podiobooks.com/legal.php">Privacy and Legal</a></li> 
-				<li><a href="http://community.podiobooks.com">Community</a></li> 
-				
-		
+			{% if user.is_authenticated %}
+				<li>Welcome, {{ user.username }}</li>
+				<li>Manage Account</li>
+				<li><a href="{% url django_authopenid.views.signout %}">Logout</a></li>
+			{% else %}
+				<li><a href="{% url django_authopenid.views.signin %}">Login/Register</a></li>
+			{% endif %}
+			<li><a href="http://podiobooks.com/blog">Blog</a></li> 
+			<li><a href="http://podiobooks.com/donate.php">Why Donate?</a></li> 
+			<li><a href="http://podiobooks.com/podiobooks/search.php?showall=true">Search</a></li> 
+			<li><a href="http://podiobooks.com/about.php">FAQ</a></li> 
+			<li><a href="http://podiobooks.com/staff.php">Staff</a></li> 
+			<li><a href="http://podiobooks.com/authors.php">Authors</a></li> 
+			
+			<li><a href="http://podiobooks.com/authors/pbpro.php">PBPro</a></li> 
+			<li><a href="http://podiobooks.com/legal.php">Privacy and Legal</a></li> 
+			<li><a href="http://community.podiobooks.com">Community</a></li> 
 			</ul> 
 		</div> 
 	</div> 
