--- a/pbsite/templates/header.html
+++ b/pbsite/templates/header.html
@@ -10,14 +10,20 @@
 			<table border=0 width="660"><tr><td align="left" valign="bottom" style="padding-bottom: 4px"><span class="smalltext" style="color:white;">Free serialized audio books, delivered on your schedule.</span></td> 
 			<td align="right">Search Podiobooks.com:<input type="text" name="keyword" class="formtextbox" size="20" onKeyPress="doClick(document.forms[0],event)" />&nbsp;<input class="formbutton" id="searchSubmit" name="searchSubmit" type="button" value="Go" onClick="doClickSubmit(document.forms[0])" /></form></td></tr></table> 
 		</div>
+		{% if user.is_authenticated %}
 		<div id="usercontrols"> 
+			<form action=""> 
+				<input class="formbutton" type="button" value="My Subscriptions" onclick="location.href='';"/>&nbsp; 
+				<input class="formbutton" type="button" value="My Account" onclick="location.href='';"/>&nbsp; 
+				<input class="formbutton" type="button" value="Log Out" onclick="location.href='{% url django_authopenid.views.signout %}';"/> 
+			</form>
+		</div>
+		{% endif %}
 		<div id="horznavbox"> 
 			<ul> 
 			<li><a href="{% url home_page %}">Home</a></li>
 			{% if user.is_authenticated %}
-				<li><a href="">Welcome, {{ user.username }}</a></li>
-				<li><a href="">Manage Account</a></li>
-				<li><a href="{% url django_authopenid.views.signout %}">Logout</a></li>
+				<li><a href="{% url django_authopenid.views.signout %}">Logout {{ user.username }}</a></li>
 			{% else %}
 				<li><a href="{% url django_authopenid.views.signin %}">Login/Register</a></li>
 			{% endif %}
