Cleanup after failed attempt and getting upload_progress to work.

--- a/pbsite/author/templates/author/upload_form.html
+++ b/pbsite/author/templates/author/upload_form.html
@@ -1,12 +1,16 @@
-{% extends "main/index.html" %}
+{% extends "base.html" %}
 {% load i18n %}
-{% load title_extras %}
+{% block head %}
+{% endblock %}
+{% block headtitle %}Author Upload Form - Podiobooks.com{% endblock %}
+{% block title %}Upload an mp3 audio file to be checked{% endblock %}
 
 {% block bodyclass %}{{block.super}}Upload Form{% endblock %}
 
 {% block content %}
-<form action="." method="POST" enctype="multipart/form-data">
+<form id="upload_form" action="." method="POST" enctype="multipart/form-data">
 {{ form.as_p }}
 <input type="submit" value="Submit" />
 </form>
 {% endblock %}
+
