--- a/pbsite/templates/header.html
+++ b/pbsite/templates/header.html
@@ -6,9 +6,9 @@
 	<div id="headerbox"> 
 		<div id="title"><a href="{% url home_page %}"><img src="http://podiobooks.com/images/title.jpg"  height="70" /></a></div> 
 		<div id="quicksearch">
-			<form method="get" id="qsearch" name=id="qsearch" action="http://podiobooks.com/podiobooks/search.php"> 
+			<form method="POST" id="qsearch" name=id="qsearch" action="{% url title_search_redirect %}"> 
 			<table border=0 width="660"><tr><td align="left" valign="bottom" style="padding-bottom: 4px"><span class="smalltext" style="color:white;">Free serialized audio books, delivered on your schedule.</span></td> 
-			<td align="right">Search Podiobooks.com:<input type="text" name="keyword" class="formtextbox" size="20" onKeyPress="doClick(document.forms[0],event)" />&nbsp;<input class="formbutton" id="searchSubmit" name="searchSubmit" type="button" value="Go" onClick="doClickSubmit(document.forms[0])" /></form></td></tr></table> 
+			<td align="right">Search Podiobooks.com:<input type="text" name="keywords" class="formtextbox" size="20" onKeyPress="doClick(document.forms[0],event)" />&nbsp;<input class="formbutton" id="searchSubmit" name="searchSubmit" type="button" value="Go" onClick="doClickSubmit(document.forms[0])" /></form></td></tr></table> 
 		</div>
 		{% if user.is_authenticated %}
 		<div id="usercontrols"> 
@@ -29,7 +29,7 @@
 			{% endif %}
 			<li><a href="http://podiobooks.com/blog">Blog</a></li> 
 			<li><a href="http://podiobooks.com/donate.php">Why Donate?</a></li> 
-			<li><a href="http://podiobooks.com/podiobooks/search.php?showall=true">Search</a></li> 
+			<li><a href="{% url title_search_form %}">Search</a></li> 
 			<li><a href="http://podiobooks.com/about.php">FAQ</a></li> 
 			<li><a href="http://podiobooks.com/staff.php">Staff</a></li> 
 			<li><a href="http://podiobooks.com/authors.php">Authors</a></li> 
