Added re-search form to search results.
Former-commit-id: f8da3749a9b24dae7179d277dbf93e935a03ef02
Former-commit-id: dbaa3522d8d73eaed20de16e990f1c5eaa141448
Former-commit-id: 4be528371b6f8b33885425c657a4e1c40e176d35
Former-commit-id: 5c0d10ec8c55a70094c0f991c970190ec06eb005

--- a/pbsite/main/templates/main/title/search_results.html
+++ b/pbsite/main/templates/main/title/search_results.html
@@ -6,6 +6,13 @@
 
 {% block content %}
 <a href="{% url home_page %}">Back to Home Page</a> | <a href="{% url category_list %}">Category List</a>
+<p>
+<div id="searchform">
+<form action="{% url title_search_redirect %}" method="POST">
+{{ titleSearchForm }}<input type="submit" value="Search" class="formbutton"/> 
+</form>
+</div>
+</p>
 <table>
 {% if result_count %}
 <h3>{{ result_count }} titles found whose name or description contained "{{ keywords }}"</h3>
