--- a/pbsite/main/templates/main/category/list.html
+++ b/pbsite/main/templates/main/category/list.html
@@ -10,7 +10,7 @@
 <div class="categories">
 <ul>
   {% for category in category_list %} 
-  <li class="category_{{category.slug}}"><a href="{{category.get_absolute_url}}">{{ category.name }}</a> - {{ category.titles.all.count }} titles</li>
+  <li class="category_{{category.slug}}"><a href="{{category.get_absolute_url}}">{{ category.name }}</a> - {{ category.title_set.all.count }} titles</li>
   {% endfor %}
 </ul>
 <p><a href="{% url title_list %}">Back to Title List</a> | <a href="/">Back to Home Page</a> </p>
