--- a/pbsite/templates/header.html
+++ b/pbsite/templates/header.html
@@ -1,8 +1,8 @@
 <!-- Header - Logo and Navigation Bar --> 
 <div id="header"> 
-	<div id="logo"> 
-	<a href="http://www.podiobooks.com/"> 
-	<img src="http://podiobooks.com/images/logo.jpg" width="127" height="93" /></a></div>
+	<div id="logo">
+		<a href="{% url home_page %}"><img src="http://podiobooks.com/images/logo.jpg" width="127" height="93" /></a>
+	</div>
 	<div id="headerbox"> 
 		<div id="title"><a href="{% url home_page %}"><img src="http://podiobooks.com/images/title.jpg"  height="70" /></a></div> 
 		<div id="quicksearch">
