--- a/pbsite/templates/registration/registration_form.html
+++ b/pbsite/templates/registration/registration_form.html
@@ -1,27 +1,19 @@
 {% extends "base.html" %}
-{% load i18n %}
 
-{% block head %}
+{% block headtitle %}Register for Podiobooks.com{% endblock %}
 
-
-{% endblock %}
-
+{% block title %}Register for Podiobooks.com{% endblock %}
 
 {% block content %}
 {% if form.errors %}
     <div class="errors">
         <p>Error while submitting form</p>
-        
     </div>
     <br>
 {% endif %}
-
-<h2>Make a choice:</h2>
-<p> <a href="{% url registration_register %}">Register</a> | <a href="{% url user_signin %}">Log-In</a></p>
-
-<form action="" method="post">
+<form action="" method="POST">
     <fieldset>
-	    <legend>{% trans "Sign In Using Your Account ID" %}</legend>
+	    <legend>Enter the Details for Your New Account:</legend>
 	    <table>
 		    {{ form.as_table }}
 	    </table>
