Updated to use new {{ site_name }} var from the site_info context processor.
Former-commit-id: daa549a36bcade712aa8e71f08178281b433a901
Former-commit-id: cc97e0031a87669f9eb67043be9897699b3b8a3a
Former-commit-id: 5c0a61ab870529d231b30d555257e1955184f0d2
Former-commit-id: 303e446dac50165c94f5d3ab4122fa08a113475a

--- a/pbsite/main/templates/main/category/detail.html
+++ b/pbsite/main/templates/main/category/detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block headtitle %}{{ category.name }} Category - Podiobooks.com{% endblock %}
+{% block headtitle %}{{ category.name }} Category - {{ site_name }}{% endblock %}
 
 {% block title %}{{ category.name }} Category{% endblock %}
 
