--- a/pbsite/main/templates/main/category/list.html
+++ b/pbsite/main/templates/main/category/list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block headtitle %}All Categories - Podiobooks.com{% endblock %}
+{% block headtitle %}All Categories - {{ site_name }}{% endblock %}
 
 {% block title %}All Categories{% endblock %}
 
