--- a/pbsite/main/templates/main/index.html
+++ b/pbsite/main/templates/main/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block headtitle %}Podiobooks.com - Serialized audio books in podcast form{% endblock %}
+{% block headtitle %}{{ site_name }} - Serialized audio books in podcast form{% endblock %}
 
 {% block pagetitledivopen %}{% endblock %}
 
