--- a/pbsite/main/templates/main/title/detail.html
+++ b/pbsite/main/templates/main/title/detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block headtitle %}{{ title.name }} - Podiobooks.com{% endblock %}
+{% block headtitle %}{{ title.name }} - {{ site_name }}{% endblock %}
 
 {% block title %}Book Information{% endblock %}
 
