--- a/pbsite/main/templates/main/title/list.html
+++ b/pbsite/main/templates/main/title/list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block headtitle %}All Titles - Podiobooks.com{% endblock %}
+{% block headtitle %}All Titles - {{ site_name }}{% endblock %}
 
 {% block title %}All Titles{% endblock %}
 
