--- a/pbsite/main/templates/main/title/search_results.html
+++ b/pbsite/main/templates/main/title/search_results.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block headtitle %}Title Search Results - Podiobooks.com{% endblock %}
+{% block headtitle %}Title Search Results - {{ site_name }}{% endblock %}
 
 {% block title %}Title Search Results{% endblock %}
 
