--- a/pbsite/templates/base.html
+++ b/pbsite/templates/base.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<title>{% block headtitle %}Podiobooks{% endblock %}</title>
+<title>{% block headtitle %}{{ site_name }}{% endblock %}</title>
 {% block metatags %}
 <meta name="Keywords" content="audio books, audiobooks, books, novels, podcast, podcasting, podiobooks" /> 
 <meta name="Description" content="Free audio books delivered as podcasts. Subscribe for free to any book and start from chapter one. Podiobooks.com" />
