--- a/pbsite/main/templates/main/title/search_form.html
+++ b/pbsite/main/templates/main/title/search_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block headtitle %}Title Search - Podiobooks.com{% endblock %}
+{% block headtitle %}Title Search - {{ site_name }}{% endblock %}
 
 {% block title %}Title Search{% endblock %}
 
