Stripped out i18n stuff.
Former-commit-id: b5c9bf83a43f4fbe9d07244100e3caa6a542acca
Former-commit-id: 1232ac410f69c803073ea0d2f5cb5c9882ea6ed1
Former-commit-id: 090187629a6c98eaf15cc96606c0067f71a7e341
Former-commit-id: 52134db56a9a8e6be059be0527a24579a5955b59

--- a/pbsite/templates/registration/registration_form.html
+++ b/pbsite/templates/registration/registration_form.html
@@ -17,7 +17,7 @@
 	    <table>
 		    {{ form.as_table }}
 	    </table>
-	    <p><input type="submit" name="bsignup'" value="{% trans "Sign up" %}"> </p>
+	    <p><input type="submit" name="bsignup'" value="Sign up"> </p>
 	 </fieldset>
 </form>
 {% endblock %}
