--- a/pbsite/author/templates/author/upload_form.html
+++ b/pbsite/author/templates/author/upload_form.html
@@ -1,16 +1,12 @@
 {% extends "base.html" %}
-{% load i18n %}
-{% block head %}
-{% endblock %}
-{% block headtitle %}Author Upload Form - Podiobooks.com{% endblock %}
-{% block title %}Upload an mp3 audio file to be checked{% endblock %}
-
-{% block bodyclass %}{{block.super}}Upload Form{% endblock %}
+{% block headtitle %}Author Upload Form - {{ site_name }}{% endblock %}
+{% block title %}Author Upload Form - {{ site_name }}{% endblock %}
 
 {% block content %}
+<h3>Upload an mp3 audio file to be checked for correct compression parameters:</h3>
 <form id="upload_form" action="." method="POST" enctype="multipart/form-data">
 {{ form.as_p }}
-<input type="submit" value="Submit" />
+<input type="submit" value="Submit" onClick="document.getElementById('progressDiv').style.visibility='visible'"/>
 </form>
+<div id="progressDiv" style="visibility: hidden"><img src="{{ MEDIA_URL }}/images/progress.gif" /></div>
 {% endblock %}
-
