Cleaned up URLs and such in registration pages.
Former-commit-id: 70241e64e4265742cc30caa9303d434274712ad2
Former-commit-id: f122ae9638b1f6d1546390b4bc42c2145febb4e6
Former-commit-id: a06c0cb9120ca890a378720a3fdd4dd13e1757f8
Former-commit-id: 18c3254f65c3f839b0ce4fe2e742dd0916fce831

--- a/pbsite/templates/registration/activate.html
+++ b/pbsite/templates/registration/activate.html
@@ -2,7 +2,7 @@
 
 {% block headtitle %}{{ category.name }} Category - Podiobooks.com{% endblock %}
 
-{% block title %}Your Podiobooks.com Account has been Activated!{% endblock %}
+{% block title %}Your {{ site_name }} Account has been Activated!{% endblock %}
 
 {% block content %}
 {% blocktrans %}
