--- a/pbsite/templates/registration/registration_complete.html
+++ b/pbsite/templates/registration/registration_complete.html
@@ -1,10 +1,8 @@
 {% extends "base.html" %}
-{% load i18n %}
 
-{% block head %}
+{% block headtitle %}{{ site_name }} Account Created{% endblock %}
 
-
-{% endblock %}
+{% block title %}Your {{ site_name }} Account has been Created!{% endblock %}
 
 
 {% block content %}
