--- a/pbsite/author/templates/author/upload_results.html
+++ b/pbsite/author/templates/author/upload_results.html
@@ -19,4 +19,7 @@
 {% endfor %}
 </pre>
 {% endautoescape %}
+
+<p><a href="{% url author_upload %}">Upload and Tesrt a New File</a> | <a href="{% url home_page %}">Return to Home Page</a> </p>
+
 {% endblock %}
