Fixed link spelling for return to upload.

--- a/pbsite/author/templates/author/upload_results.html
+++ b/pbsite/author/templates/author/upload_results.html
@@ -20,6 +20,6 @@
 </pre>
 {% endautoescape %}
 
-<p><a href="{% url author_upload %}">Upload and Tesrt a New File</a> | <a href="{% url home_page %}">Return to Home Page</a> </p>
+<p><a href="{% url author_upload %}">Upload and Test a New File</a> | <a href="{% url home_page %}">Return to Home Page</a> </p>
 
 {% endblock %}
